Added a toggle for dark vs light mode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="app">
+        <button id="theme-toggle" class="theme-toggle">
+            🌙
+        </button>
         <header>
             <h1>Chess Patterns</h1>
         </header>
